--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.910'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,9 +19,19 @@ no_index:
     - t
 requires:
   Catalyst::Action::RenderView: 0
+  Catalyst::Plugin::Authorization::Roles: 0
   Catalyst::Plugin::ConfigLoader: 0
+  Catalyst::Plugin::Log::Dispatch: 0
   Catalyst::Plugin::Static::Simple: 0
   Catalyst::Runtime: 5.7012
+  Catalyst::View::FillInForm: 0
+  Catalyst::View::TT: 0
+  Config::Any::Perl: 0
+  Data::ICal: 0
+  DateTime::Format::ICal: 0
+  HTML::FormHandler: 0
+  HTML::FormHandler::Model::DBIC: 0
+  Log::Dispatch::Config: 0
   YAML: 0
 resources:
   license: http://dev.perl.org/licenses/
